--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/note.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/musical-note-music-svgrepo-com.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Musician Website</title>
+    <title>Havner Music</title>
   </head>
   <body>
     <div id="root"></div>
