--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script
+      defer
+      src="https://umami.thenoetrevino.com:3000/script.js"
+      data-website-id="2afeea81-843f-4ced-9b28-0739fce0fd74"
+    ></script>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/musical-note-music-svgrepo-com.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/musical-note-music-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Havner Music</title>
   </head>
