--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <script
       defer
-      src="https://umami.thenoetrevino.com:3000/script.js"
+      src="https://umami.thenoetrevino.com/script.js"
       data-website-id="2afeea81-843f-4ced-9b28-0739fce0fd74"
     ></script>
     <meta charset="UTF-8" />
